deployment/create-name-space.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dockercoins
  labels:
    app: coinapp
