deployment/create-redis-deployment-ext.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redisapp
  type: ExternalName
  externalName: redis.192.168.33.101.nip.io
  ports:
    - name: redis
      port: 6379
      protocol: TCP
