deployment/create-rng-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  selector:
    app: rngapp
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rng-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rngapp
  template:
    metadata:
      labels:
        app: rngapp
    spec:
      containers:
      - name: rng
        image: 127.0.0.1:30210/rng
        imagePullPolicy: IfNotPresent
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
