deployment/create-webui-deployment-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: webui-blue
spec:
  selector:
    app: webuiapp-blue
  ports:
  - port: 80
    targetPort: 80
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-blue-deployment
spec:
  selector:
    matchLabels:
      app: webuiapp-blue
  template:
    metadata:
      labels:
        app: webuiapp-blue
    spec:
      containers:
      - name: webui
        image: 127.0.0.1:30210/webui:v0.2
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
