deployment/create-webui-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  selector:
    app: webuiapp
  ports:
  - port: 80
    targetPort: 80
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deployment
spec:
  selector:
    matchLabels:
      app: webuiapp
  template:
    metadata:
      labels:
        app: webuiapp
    spec:
      containers:
      - name: webui
        image: 127.0.0.1:30210/webui
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
