deployment/create-worker-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: worker
spec:
  selector:
    app: workerapp
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workerapp
  template:
    metadata:
      labels:
        app: workerapp
    spec:
      containers:
      - name: worker
        image: 127.0.0.1:30210/worker
        imagePullPolicy: IfNotPresent
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
